[project]
name = "password-vault-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncpg (>=0.30.0,<1.0)",
    "fastapi>=0.115.11",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
]

[dependency-groups]
docker = [
    "maturin>=1.8.3"
]
dev = [
    "maturin>=1.8.3",
    "ruff>=0.10.0",
    "pre-commit (>=4.2,<5.0)",
    "pyright>=1.1.398",
]

[tool.uv]
package = false

[tool.pyright]
include = [
    "app",
]

[tool.ruff]
line-length = 120
target-version = "py313"
lint.select = [
    "E",
    "F",
    "I",
    "A",
    "B",
    "ANN",
    "FAST",
    "ASYNC",
    "ARG",
    "S",
    "BLE",
    "COM",
    "C4",
    "T20",
    "Q",
    "RET",
    "SIM",
    "TC",
    "PTH",
    "N",
    "PERF",
    "W",
    "RUF"
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "app"
module-name = "lwe"
